Fxing file path on pictures

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/wdd1.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/WDD1.png" class="img-responsive" alt="">
                     </a>
                 </div>
 
@@ -764,7 +764,7 @@
                         <div class="modal-body">
                             <h2>Sage Info Security</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/infosecSage.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/infosecSage.PNG" class="img-responsive img-centered" alt="">
                             <p>As part of my Work Experience with <a href="http://www.sageone.ie/" target="_blank">Sage</a>   
                                I had to do a 3rd year project based on my work experience. My project was based on Information
                                 Security Practices at Sage. I spent 5-6 months researching the Information Security within
@@ -795,7 +795,7 @@
                         <div class="modal-body">
                             <h2>Software Delepment</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/sdev1.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/sdev1.PNG" class="img-responsive img-centered" alt="">
                             <p>
                                 For my 2nd year Software Development Group Project we built a Cinema Booking System. The Cinema Booking system has a funtional
                                 database, log in for both staff and customers, and showed all the films in the cinema and up
@@ -825,7 +825,7 @@
                         <div class="modal-body">
                             <h2>Web Development & Design</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/wdd.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/WDD.PNG" class="img-responsive img-centered" alt="">
                             <p>
                                 For my 2nd Year WDD assigment I had to add features to an application. The application consisted of a list on categories 
                                 and a list
